--- a/barcode.html
+++ b/barcode.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generate Barcode</title>
+    <title>Generate your Barcode</title>
     <script src="barcode.js"></script>
 </head>
 <body>
