--- a/barcode.html
+++ b/barcode.html
@@ -10,7 +10,7 @@
     <h1>generate Barcode</h1>
     <p>Enter Barcode value : 
         <input type="text" id="input">
-        <button id="generate">Submit</button>
+        <button id="generate">SUBMIT</button>
     </p>
 
     <svg id="barcode"></svg>
